# rgbd-slam-practice

./: .gitignore  CMakeLists.txt  README.md  parameter.txt
include/: parameterReader.h  print_colors.h  slamBase.h
src/: CMakeLists.txt  parameterReader.cpp  slam.cpp  slamBase.cpp
